syntax = "proto3";

option go_package = "url.shortener/internal/proto";

package proto;

service UrlShortener {
  rpc CreateShortUrl(OriginalUrl) returns (ShortUrl) {}
  rpc GetOriginalUrl(ShortUrl) returns (OriginalUrl) {}
}

message OriginalUrl {
  string original_url = 1;
}

message ShortUrl {
  string short_url = 1;
}
